# news-agent

./: .gitignore  LICENSE  Makefile  README.md  docker-compose-agent.yml  docker-compose-service.yml  pyproject.toml
.github/workflows/: news-agent.build.deploy.yaml  news-service.build.deploy.yaml
docker/: Dockerfile.dev  Dockerfile.service
docs/: style.css
frontend/: README.md  api.py  index.html  script.js  style.css
prazo/: main.py
prazo/core/: config.py  db.py  logger.py  sources.yaml  topics.yaml
prazo/schemas/: __init__.py  article.py  state.py
prazo/utils/: chat_models.py  db_tool.py  db_wrapper.py  deduplication.py  parser_tools.py  source_service.py  summary_service.py  summary_tools.py  tools.py
prazo/utils/agent/: reactive_agent.py
prazo/utils/db/: __init__.py  db_tool.py
prazo/utils/parser/: helper.py  parser_tools.py  source_config.py  source_service.py
prazo/utils/search/: brave_search.py  ddg_search.py
service/: README.md
tests/: deduplication.py  llm.py  parser.py  test_db.py  tools.py
utils/: parser_tools.py  source_config.py  source_service.py
